# jw-advpl

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MELHORIAS.md  Makefile  NOTICE  README.md  SECURITY.md
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
agents/: advpl-code-generator.md  advpl-ini-auditor.md  advpl-log-investigator.md  advpl-patch-orchestrator.md
cli/: coverage.xml  pyproject.toml
cli/plugadvpl/: __init__.py  __main__.py  _skill_catalog.py  _version.py  agent_doctor.py  apply_patch.py  catalog.py  cli.py  codex_config.py  codex_skills.py  coletadb_client.py  compile.py  compile_doctor.py  compile_installer.py  compile_parser.py  compile_probe.py  compile_servers.py  copilot_instructions.py  credentials.py  cursor_rules.py  db.py  dispatch_eval.py  doc_writer.py  edit_prw.py  eval_harness.py  gemini_skills.py  ignore.py  ingest.py  ingest_ini.py  ingest_log.py  ingest_poui.py  ingest_rest.py  ingest_sx.py  mapear.py  migrate_tlpp.py  migrate_tlpp_diff.py  output.py  query.py  runtime_config.py  scan.py  (+3 more)
cli/plugadvpl/aplicador_sx/: __init__.py  boilerplate.prw.tmpl  emit.py  schema.py
cli/plugadvpl/dtc/: __init__.py  cli.py  doctor.py  exporter.py  parser.py  reader.py  server.py
cli/plugadvpl/gera_script/: __init__.py  emit.py  generate.py  schema.py
cli/plugadvpl/gera_script/templates/: patch_e_compilacao.ps1.tmpl  patch_e_compilacao.sh.tmpl  tq_phase.ps1.tmpl  tq_phase.sh.tmpl
cli/plugadvpl/lookups/: apis_por_build.json  campos_semantica.json  compile_patterns.json  ini_roles.json  ini_rules.json  lint_rules.json  log_categories.json  log_rules.json  log_tips.json  poui_catalog_meta.json  poui_componentes.json  poui_interfaces.json  poui_schematics.json  redact_patterns.json
cli/plugadvpl/migrate_tlpp_recipes/: __init__.py  begin_sequence.py  conout_to_fwlog.py  convert_encoding.py  expand_truncated.py  header_includes.py  json_inline.py  named_args.py  namespace_infer.py  remove_public.py  rename_extension.py  user_function.py
cli/plugadvpl/migrations/: 001_initial.sql  009_execauto_op_dynamic.sql  010_universo4_metrics.sql  011_ini_audit.sql  012_log_diagnose.sql  013_universo2_extras.sql  014_universo6_workflow.sql  015_universo8_menus.sql  016_lint_sonar_map.sql  017_ini_score.sql  018_ini_summary.sql  019_apis_por_build.sql  020_campos_semantica.sql  021_ini_rules_proveniencia.sql  022_poui.sql  023_poui_datasources.sql  024_poui_componentes.sql  025_poui_componentes_uso.sql  026_fonte_header_doc.sql  027_catalog.sql  028_poui_interfaces.sql  029_poui_iface_uso.sql  030_poui_imports.sql  031_poui_catalog_meta.sql  032_poui_schematics.sql  033_sx_extras.sql  034_patches_applied.sql
cli/plugadvpl/parsing/: _split.py  apis_build.py  decisions.py  execauto.py  header.py  ini.py  ini_audit.py  ini_known_keys.py  ini_report.py  ini_suggest.py  lint.py  log.py  log_diagnose.py  log_report.py  metrics.py  parser.py  poui.py  protheus_doc.py  semantica.py  stripper.py  sx_csv.py  triggers.py
cli/plugadvpl/privacy/: __init__.py  brdocs.py  buckets.py  config.py  diagnose.py  engine.py  injection.py
cli/tests/bench/: test_ingest_perf.py
cli/tests/dtc/: conftest.py
cli/tests/dtc/e2e/: test_pipeline.py
cli/tests/dtc/integration/: test_native.py
cli/tests/dtc/unit/: test_cli.py  test_doctor.py  test_doda_native.py  test_exporter.py  test_parser.py  test_reader.py  test_server.py
cli/tests/e2e_local/: test_real_client_ingest.py
cli/tests/eval/: baseline.json
cli/tests/eval/golden/: seed.json
cli/tests/fixtures/compile_outputs/: advpls_crash.txt  appre_errprw_c2006.txt  appre_errprw_c2090.txt  clean_compile.txt  missing_include_pt.txt  mixed_errors_warnings.txt  unbalanced_endif_en.txt  variable_unused_warn.txt
cli/tests/fixtures/migrate_tlpp/: simple_user_function.prw  with_begin_sequence.prw  with_json_object.prw  with_public_var.prw
cli/tests/fixtures/migrate_tlpp/SIGAFAT/: with_namespace_hint.prw
cli/tests/fixtures/sx_synthetic/: jobs.csv  mpmenu_function.csv  mpmenu_i18n.csv  mpmenu_item.csv  mpmenu_key_words.csv  mpmenu_menu.csv  mpmenu_rw.csv  record_counts.csv  schedules.csv  sx1.csv  xal.csv  xam.csv  xxa.csv
cli/tests/integration/: test_cli.py  test_cli_compile.py  test_cli_diagnose.py  test_cli_gera_script.py  test_cli_tq.py  test_ingest.py  test_ingest_rest.py  test_ingest_sx.py  test_session_start_hook.py  test_stop_hook.py
cli/tests/smoke/: test_compile_real.py
cli/tests/unit/: test_agent_doctor.py  test_apis_build.py  test_aplicador_sx_discovery.py  test_aplicador_sx_emit.py  test_aplicador_sx_golden.py  test_aplicador_sx_schema.py  test_apply_patch.py  test_catalog.py  test_codex_config.py  test_codex_skills.py  test_coletadb_client.py  test_compile.py  test_compile_catalog_consistency.py  test_compile_doctor.py  test_compile_installer.py  test_compile_parser.py  test_compile_probe.py  test_compile_servers.py  test_copilot_instructions.py  test_credentials.py  test_cursor_rules.py  test_db.py  test_decisions.py  test_diagnose.py  test_dispatch_eval.py  test_doc_writer.py  test_edit_prw.py  test_eval_gate.py  test_eval_harness.py  test_exec_contract_docs.py  test_execauto.py  test_gemini_skills.py  test_gera_script_emit.py  test_gera_script_golden.py  test_gera_script_schema.py  test_header.py  test_ignore.py  test_ingest_poui.py  test_ini.py  test_ini_audit.py  (+49 more)
cli/tests/unit/__snapshots__/: test_aplicador_sx_golden.ambr  test_gera_script_golden.ambr  test_migrate_tlpp_snapshots.ambr  test_parser_snapshots.ambr
cli/tests/unit/parsing/: test_poui.py
docs/: FAQ.md  ROADMAP.md  apply-patch-contract.md  architecture.md  auditoria-seguranca-2026-06-09.md  cli-reference.md  coletadb-contract.md  compile-checklist.md  dtc-setup.md  exec-contract.md  ini-audit-kb-enrichment-design.md  limitations.md  poui-pesquisa-e-plano.md  privacidade-mascaramento.md  privacidade-relativizacao-design.md  roadmap-vs-engpro-totvs.md  schema.md  seguranca-gitleaks-cliente.md  seguranca.md  setup-compile.md
(+161 files in other folders)
