[project]
name = "plugadvpl"
dynamic = ["version"]
description = "CLI que indexa fontes ADVPL/Protheus em SQLite com FTS5 para análise por LLM (companheiro do plugin Claude Code plugadvpl)"
readme = "README.md"
# License file lives in monorepo root (see ../LICENSE). PEP 639 SPDX expression below is the canonical declaration.
license = "MIT"
authors = [{ name = "JoniPraia", email = "jonipraiaoficial@gmail.com" }]
requires-python = ">=3.11"
keywords = ["advpl", "tlpp", "protheus", "totvs", "sqlite", "fts5", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Code Generators",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer >=0.15",
    "rich >=13.7",
    "chardet >=5.0",
    "psutil >=5.9",
    # v0.9.0: cofre nativo do OS (Win Credential Manager / macOS Keychain /
    # Linux Secret Service) pra guardar senha do Protheus sem env var.
    # Fallback gracioso em ambientes sem backend (ex: Linux server sem D-Bus).
    "keyring >=24.0",
]

[project.optional-dependencies]
# dtc (#12): `dtc export` (CSV/JSON/XLSX) usa pandas/openpyxl. Mantidos como
# EXTRA OPCIONAL pra nao inflar o core leve do plugadvpl (~50-70 MB com numpy)
# pra quem nunca exporta. `dtc info` (parser DODA nativo) e o resto do CLI
# seguem no install base; so `dtc export` pede `plugadvpl[dtc]`. O import e
# lazy e guardado (mensagem amigavel se o extra nao estiver instalado).
dtc = ["pandas >=2.2", "openpyxl >=3.1"]

[project.urls]
Homepage = "https://github.com/JoniPraia/plugadvpl"
Issues = "https://github.com/JoniPraia/plugadvpl/issues"
Source = "https://github.com/JoniPraia/plugadvpl"
Changelog = "https://github.com/JoniPraia/plugadvpl/blob/main/CHANGELOG.md"

[project.scripts]
plugadvpl = "plugadvpl.cli:main"

[dependency-groups]
dev = [
    "pytest >=8.0",
    "pytest-benchmark >=5.0",
    "pytest-cov >=5.0",
    "pytest-mock >=3.12",
    "hypothesis >=6.100",
    "syrupy >=4.0",
    "ruff >=0.6",
    "mypy >=1.10",
    # dtc (#12): pytest-mock pros testes vendorizados do dtcat (mocker).
    # pandas/openpyxl ficam no extra opcional [dtc] (ver optional-dependencies);
    # os testes de export usam o extra (resolvido no uv.lock / `uv sync --extra dtc`).
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.hooks.vcs]
version-file = "plugadvpl/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["plugadvpl"]
# Hatchling inclui automaticamente todos arquivos non-Python dentro do package
# (migrations/*.sql, lookups/*.json). NÃO usar force-include pra esses (causa
# "Duplicate filename in local headers").
# v0.16.2: force-include necessário pra skills/ porque vive FORA do package
# (em repo root, não em plugadvpl/). Sem duplicação.
#
# Nota: requer build do checkout (não wheel-from-sdist), porque ../skills só
# existe no monorepo. CI faz `uv build --sdist` e `uv build --wheel`
# separadamente em release.yml — cada um construido direto da fonte. Sem isso,
# `uv build` chained (sdist → wheel-from-sdist) falha porque ../skills não
# existe dentro do sdist extraido.
force-include = { "../skills" = "plugadvpl/skills", "../docs/reference-impl/coletadb.tlpp" = "plugadvpl/server_components/coletadb.tlpp" }

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["plugadvpl/_version.py"]  # auto-gerado por hatch-vcs

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF",
    "PTH",   # use pathlib em vez de os.path
    "RET",   # return values consistentes
    "ARG",   # unused arguments
    "TCH",   # imports apenas para type-checking → mover para TYPE_CHECKING block
    "PL",    # pylint subset (refactor, warnings, conventions)
]
ignore = ["E501", "PLR0913"]  # line-length pelo formatter; PLR0913=too-many-args (CLI tem flags demais por design)

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLC0415",  # imports inside functions are OK in tests (TDD pattern)
    "PLR2004",  # magic values in assertions are OK
    "TC002",    # type-only imports for monkeypatch.MonkeyPatch is fine
    "TC003",    # type-only imports for pathlib.Path in fixtures is fine
    "RUF059",   # unused unpacked variable in tests (`content, _enc = ...`) is fine
]
"plugadvpl/cli.py" = [
    # Entry-point com 13+ subcomandos: imports lazy reduzem o cold-start de
    # `plugadvpl --help` (caso comum) — handlers só carregam o módulo do
    # subcomando invocado. Sem ciclos detectados (só __main__.py importa cli).
    "PLC0415",
]
"plugadvpl/migrate_tlpp_recipes/__init__.py" = [
    # _register_all() faz lazy import dos 11 recipes pra evitar import
    # circular (cada recipe importa RecipeBase/RecipeResult/MigrationContext
    # desse __init__). Padrão idêntico ao cli.py.
    "PLC0415",
]
"plugadvpl/dtc/**" = [
    # Código vendorizado de tbarbito/dtcat (MIT) — parser c-tree ISAM (#12).
    # Mantido fiel ao upstream (ruleset mais leve: E/F/I/B/UP/SIM/RUF).
    "PLR2004",  # bytes/offsets mágicos (0x5F, faixas ASCII) são idiomáticos no parser binário
    "PLC0415",  # imports lazy: pandas só no export, driver nativo só no fallback c-tree
    "TC001", "TC002", "TC003",  # imports em runtime preservados como no upstream
]
"tests/dtc/**" = [
    # Testes vendorizados do dtcat: fixtures usadas por efeito colateral
    # (monkeypatch de env/PID) entram como args sem uso direto.
    "ARG001", "ARG002", "ARG005",
]

[tool.ruff.format]
docstring-code-format = true   # formata exemplos de código dentro de docstrings

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
enable_error_code = ["redundant-expr", "truthy-bool", "ignore-without-code"]

# dtc (#12): código vendorizado de tbarbito/dtcat (MIT) — parser c-tree ISAM
# com ctypes/struct e driver nativo opcional. Upstream usa mypy não-strict;
# manter fiel ao upstream em vez de anotar tudo sob strict=true do plugadvpl.
# Coberto por ruff/format + suíte de testes própria (tests/dtc/).
[[tool.mypy.overrides]]
module = "plugadvpl.dtc.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-m", "not local and not integration and not e2e",
    "--strict-markers",
    "--cov=plugadvpl",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=xml",   # para Codecov upload em CI
]
markers = [
    "local: testes que precisam de fixtures locais não distribuídas. Excluídos em CI. Veja CONTRIBUTING.md.",
    "slow: testes que demoram >1s. Rodar com -m slow para incluir.",
    "smoke: smoke tests that hit real advpls (require PLUGADVPL_SMOKE=1)",
    "integration: dtc (#12) — requer FairCom DB instalado (FAIRCOM_HOME). Fora do CI.",
    "e2e: dtc (#12) — requer FairCom + fixture .dtc. Fora do CI.",
]
